--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "date-fns": "^2.14.0",
+    "flatpickr": "^4.6.3",
     "observer": "nishanbajracharya/observer"
   }
 }
